--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -33,6 +33,9 @@
                   </div>
                 </div>
                   <div class="form-group mt-4 mb-0">
+                  <% if current_page?(admin_registration_path) %>
+                    <%= f.hidden_field :admin_flg, :value => true %>
+                  <% end %>
                     <%= f.submit "アカウントを作成する" ,class:"btn btn-primary btn-block" %>
                   </div>
               </div>
