--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -44,6 +44,15 @@
             </tr>
           </thead>
           <tbody>
+            <% @orders.each do |order| %>
+              <tr>
+                <td><%= order.title %></td>
+                <td><%= order.first_keyword %></td>
+                <td><%= order.second_keyword %></td>
+                <td><%= order.words %></td>
+                <td><%= order.created_at %></td>
+              </tr>
+            <% end %>
           </tbody>
         </table>
       </div>
