本数カウントの実装

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -16,7 +16,7 @@
           <div class="col-xl-6">
             <div class="card mb-4">
               <div class="card-header">本日の発注本数</div>
-                <div class="card-body">あああああ本</div>
+                <div class="card-body"><%= @exist.count%>本</div>
             </div>
           </div>
         </div>
