--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -6,7 +6,7 @@
 <%= render 'users/shared/header' %>
 <div id="layoutSidenav_content">
   <div class="container-fluid">
-      <h1 class="mt-4">応募に応募する</h1>
+      <h1 class="mt-4">応募可能記事一覧</h1>
       <% if notice %>
         <div class="sucsess-flash-message"><%= flash[:notice]%>
           <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -32,7 +32,19 @@
             </tr>
           </thead>
           <tbody>
-            
+            <%= form_with model: @apply, url: applies_path , id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
+            <% @orders.each do |order| %>
+              <tr>
+                <td><%= order.title %></td>
+                <td><%= order.first_keyword %></td>
+                <td><%= order.second_keyword %></td>
+                <td><%= order.words %></td>
+                <td><%= order.created_at %></td>
+                <%= f.hidden_field :order_id, value: order.id %>
+                <td><%= f.submit "応募" ,class: "btn btn-primary" %></td>
+              </tr>
+            <% end %>
+            <% end %>
           </tbody>
         </table>
       </div>
