--- a/app/views/applies/index.html.erb
+++ b/app/views/applies/index.html.erb
@@ -7,7 +7,7 @@
 <%= render 'users/shared/header' %>
 <div id="layoutSidenav_content">
   <div class="container-fluid">
-      <h1 class="mt-4">応募記事確認</h1>
+      <h1 class="mt-4">応募した記事一覧</h1>
       <% if notice %>
         <div class="sucsess-flash-message"><%= flash[:notice]%>
           <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -33,8 +33,15 @@
             </tr>
           </thead>
           <tbody>
-              <tr>
-              
+            <% @applies.each do |apply| %>
+                <td><%= apply.order.title %></td>
+                <td><%= apply.order.first_keyword %></td>
+                <td><%= apply.order.second_keyword %></td>
+                <td><%= apply.order.words %></td>
+                <td><%= apply.created_at %></td>
+                <td><%= link_to "キャンセル", "#", class: "btn btn-primary" %></td>
+              </tr>
+            <% end %>
           </tbody>
         </table>
       </div>
