--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -7,7 +7,7 @@
 <%= render 'users/shared/header' %>
 <div id="layoutSidenav_content">
   <div class="container-fluid">
-      <h1 class="mt-4">応募した記事一覧</h1>
+      <h1 class="mt-4">応募記事確認</h1>
       <% if notice %>
         <div class="sucsess-flash-message"><%= flash[:notice]%>
           <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -33,14 +33,19 @@
             </tr>
           </thead>
           <tbody>
-              <% @applies.each do |apply| %>
+            <%= form_with model: @post, url: posts_path , id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
+            <% @applies.each do |apply| %>
+              <tr>
                 <td><%= apply.order.title %></td>
                 <td><%= apply.order.first_keyword %></td>
                 <td><%= apply.order.second_keyword %></td>
                 <td><%= apply.order.words %></td>
                 <td><%= apply.created_at %></td>
-                <td><%= link_to "作成開始", '#', class: "btn btn-primary" %></td>
+                <%= f.hidden_field :title, value: apply.order.title %>
+                <%= f.hidden_field :order_id, value: apply.order_id %>
+                <td><%= f.submit "作成開始" ,class: "btn btn-primary" %></td>
               </tr>
+            <% end %>
             <% end %>
           </tbody>
         </table>
