すでに作成が開始している記事へのcreateアクションの制限

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -39,11 +39,7 @@
                 <td><%= apply.order.second_keyword %></td>
                 <td><%= apply.order.words %></td>
                 <td><%= apply.created_at %></td>
-                <% if @post.exists? %>
-                <td><%= link_to "下書き画面", '#', class: "btn btn-primary" %></td>
-                <% else %>
-                <td><%= link_to "作成開始", new_post_path, class: "btn btn-primary" %></td>
-                <% end %>
+                <td><%= link_to "下書き画面へ", '#', class: "btn btn-primary" %></td>
               </tr>
             <% end %>
           </tbody>
