--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -7,7 +7,17 @@
 <%= render 'users/shared/header' %>
 <div id="layoutSidenav_content">
   <div class="container-fluid">
-      <h1 class="mt-4">記事作成画面</h1><div class="card mb-4">
+    <h1 class="mt-4">記事作成画面</h1>
+      <% if notice %>
+        <div class="sucsess-flash-message"><%= flash[:notice]%>
+          <button type="button" class="close" data-dismiss="alert">&times;</button>
+        </div>
+      <% elsif alert %>
+        <div class="error-flash-message"><%= flash[:alert]%>
+          <button type="button" class="close" data-dismiss="alert">&times;</button>
+        </div>
+      <% end %>
+  <div class="card mb-4">
   <div class="card-header">記事情報</div>
     <div class="card-body">
       <div class="table-responsive">
