--- a/app/views/users/shared/_admin_sidebar.html.erb
+++ b/app/views/users/shared/_admin_sidebar.html.erb
@@ -4,7 +4,7 @@
       <div class="sb-sidenav-menu">
         <div class="nav">
           <div class="sb-sidenav-menu-heading">TOP</div>
-            <a class="nav-link" href="index.html">
+            <a class="nav-link" href="/users">
               <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                 トップページ
             </a>
@@ -35,7 +35,7 @@
               <nav class="sb-sidenav-menu-nested nav">
                 <a class="nav-link" href="login.html">応募済み記事</a>
                 <a class="nav-link" href="register.html">未応募記事</a>
-                <a class="nav-link" href="password.html">公開済み記事</a>
+                <%= link_to '発注ページ', published_posts_path , class:"nav-link" %>
               </nav>
             </div>
             <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#pagesCollapseError" aria-expanded="false" aria-controls="pagesCollapseError">
