--- a/app/views/users/shared/_header.html.erb
+++ b/app/views/users/shared/_header.html.erb
@@ -1,5 +1,5 @@
 <div class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-  <%= link_to 'Post CMS', root_path , class: "navbar-brand" %>
+  <%= link_to 'Post CMS', users_root_path , class: "navbar-brand" %>
       <ul class="navbar-nav ml-auto ml-md-0">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
