admin側のヘッダーとサイドバーの修正

--- a/app/views/admins/admins/index.html.erb
+++ b/app/views/admins/admins/index.html.erb
@@ -1,5 +1,5 @@
-<%= render 'users/shared/admin_sidebar' %>
-<%= render 'users/shared/header' %>
+<%= render 'admins/shared/admin_sidebar' %>
+<%= render 'admins/shared/header' %>
             <div id="layoutSidenav_content">
                 <main>
                     <div class="container-fluid">
