--- a/app/views/admins/orders/index.html.erb
+++ b/app/views/admins/orders/index.html.erb
@@ -1,5 +1,5 @@
-<%= render 'users/shared/admin_sidebar' %>
-<%= render 'users/shared/header' %>
+<%= render 'admins/shared/admin_sidebar' %>
+<%= render 'admins/shared/header' %>
 <div id="layoutSidenav_content">
   <div class="container-fluid">
       <h1 class="mt-4">記事発注</h1>
@@ -22,9 +22,9 @@
         </div>
       <h2>記事を発注する</h2>
   <div>
-    <%= link_to "テンプレートをダウンロードする", download_orders_path(format: :csv), class: "btn-flat-border " %>
+    <%= link_to "テンプレートをダウンロードする", download_admins_orders_path(format: :csv), class: "btn-flat-border " %>
   <label >
-    <%= form_tag import_orders_path, multipart: true do %>
+    <%= form_tag import_admins_orders_path, multipart: true do %>
     <%= file_field_tag :file %>
     <%= submit_tag "発注する" %>
   </label>
@@ -53,7 +53,7 @@
                 <td><%= order.second_keyword %></td>
                 <td><%= order.words %></td>
                 <td><%= order.created_at %></td>
-                <td><%= link_to "削除", order_path(order),method: :delete, class: "btn btn-primary" %></td>
+                <td><%= link_to "削除", admins_order_path(order),method: :delete, class: "btn btn-primary" %></td>
               </tr>
             <% end %>
           </tbody>
