--- a/app/views/admins/shared/_admin_sidebar.html.erb
+++ b/app/views/admins/shared/_admin_sidebar.html.erb
@@ -16,7 +16,7 @@
             </a>
           <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-parent="#sidenavAccordion">
             <nav class="sb-sidenav-menu-nested nav">
-              <%= link_to '発注ページ', orders_path , class:"nav-link" %>
+              <%= link_to '発注ページ', admins_orders_path , class:"nav-link" %>
               <a class="nav-link" href="layout-sidenav-light.html">発注済み記事一覧</a>
             </nav>
           </div>
