--- a/app/views/users/shared/_users_sidebar.html.erb
+++ b/app/views/users/shared/_users_sidebar.html.erb
@@ -16,8 +16,8 @@
             </a>
           <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-parent="#sidenavAccordion">
             <nav class="sb-sidenav-menu-nested nav">
-              <%= link_to '応募', new_apply_path, class:"nav-link" %>
-              <%= link_to '応募済み記事一覧', applies_path, class:"nav-link" %>
+              <%= link_to '応募', new_users_apply_path, class:"nav-link" %>
+              <%= link_to '応募済み記事一覧', users_applies_path, class:"nav-link" %>
             </nav>
           </div>
             <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
@@ -33,7 +33,7 @@
                 </a>
             <div class="collapse" id="pagesCollapseAuth" aria-labelledby="headingOne" data-parent="#sidenavAccordionPages">
               <nav class="sb-sidenav-menu-nested nav">
-                <%= link_to '応募済み記事', applies_path, class:"nav-link" %>
+                <%= link_to '応募済み記事', users_applies_path, class:"nav-link" %>
                 <%= link_to '下書き記事', draft_posts_path, class:"nav-link" %>
                 <%= link_to '納品済み記事', "#" , class:"nav-link" %>
               </nav>
