--- a/app/views/users/shared/_users_sidebar.html.erb
+++ b/app/views/users/shared/_users_sidebar.html.erb
@@ -33,8 +33,8 @@
                 </a>
             <div class="collapse" id="pagesCollapseAuth" aria-labelledby="headingOne" data-parent="#sidenavAccordionPages">
               <nav class="sb-sidenav-menu-nested nav">
-                <%= link_to '応募済み記事', users_applies_path, class:"nav-link" %>
-                <%= link_to '下書き記事', draft_posts_path, class:"nav-link" %>
+                <%= link_to '応募済み記事', new_users_post_path, class:"nav-link" %>
+                <%= link_to '下書き記事', draft_users_posts_path, class:"nav-link" %>
                 <%= link_to '納品済み記事', "#" , class:"nav-link" %>
               </nav>
             </div>
