--- a/app/views/admins/shared/_admin_sidebar.html.erb
+++ b/app/views/admins/shared/_admin_sidebar.html.erb
@@ -33,9 +33,9 @@
                 </a>
             <div class="collapse" id="pagesCollapseAuth" aria-labelledby="headingOne" data-parent="#sidenavAccordionPages">
               <nav class="sb-sidenav-menu-nested nav">
-                <a class="nav-link" href="login.html">応募済み記事</a>
                 <a class="nav-link" href="register.html">未応募記事</a>
-                <%= link_to '発注ページ', published_posts_path , class:"nav-link" %>
+                <%= link_to '納品済み記事', delivered_admins_posts_path , class:"nav-link" %>
+                <%= link_to '公開済み記事', published_admins_posts_path , class:"nav-link" %>
               </nav>
             </div>
             <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#pagesCollapseError" aria-expanded="false" aria-controls="pagesCollapseError">
