--- a/app/views/users/users/index.html.erb
+++ b/app/views/users/users/index.html.erb
@@ -6,13 +6,13 @@
         <h1 class="mt-4">ダッシュボード</h1>
             <div class="row">
                 <div class="col-xl-3 col-md-6">
-                    <div class="card bg-primary text-white mb-4">
+                    <div class="card mb-4">
                         <div class="card-header">本日の応募本数</div>
                             <div class="card-body"><%= @exist.count%>本</div>
                     </div>
                 </div>
                 <div class="col-xl-3 col-md-6">
-                    <div class="card bg-primary text-white mb-4">
+                    <div class="card mb-4">
                         <div class="card-header">累計の応募本数</div>
                             <div class="card-body"><%= @exists.count%>本</div>
                     </div>
