--- a/app/views/users/shared/_users_sidebar.html.erb
+++ b/app/views/users/shared/_users_sidebar.html.erb
@@ -35,7 +35,7 @@
               <nav class="sb-sidenav-menu-nested nav">
                 <%= link_to '応募済み記事', new_users_post_path, class:"nav-link" %>
                 <%= link_to '下書き記事', draft_users_posts_path, class:"nav-link" %>
-                <%= link_to '納品済み記事', "#" , class:"nav-link" %>
+                <%= link_to '納品済み記事', delivered_users_posts_path , class:"nav-link" %>
               </nav>
             </div>
             <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#pagesCollapseError" aria-expanded="false" aria-controls="pagesCollapseError">
