--- a/app/views/admins/posts/show.html.erb
+++ b/app/views/admins/posts/show.html.erb
@@ -1,10 +1,5 @@
-
-<% if @user.admin_flg == false %>
-  <%= render 'users/shared/users_sidebar' %>
-<% else %>
-  <%= render 'users/shared/admin_sidebar' %>
-<% end %>
-<%= render 'users/shared/header' %>
+<%= render 'admins/shared/admin_sidebar' %>
+<%= render 'admins/shared/header' %>
 <div id="layoutSidenav_content">
   <div class="container-fluid">
     <h1 class="mt-4">記事検修画面</h1>
