--- a/app/views/admins/orders/index.html.erb
+++ b/app/views/admins/orders/index.html.erb
@@ -4,13 +4,9 @@
   <div class="container-fluid">
       <h1 class="mt-4">記事発注</h1>
       <% if notice %>
-        <div class="sucsess-flash-message"><%= flash[:notice]%>
-          <button type="button" class="close" data-dismiss="alert">&times;</button>
-        </div>
+        <div class="sucsess-flash-message"><%= flash[:notice]%></div>
       <% elsif alert %>
-        <div class="error-flash-message"><%= flash[:alert]%>
-          <button type="button" class="close" data-dismiss="alert">&times;</button>
-        </div>
+        <div class="error-flash-message"><%= flash[:alert]%></div>
       <% end %>
         <div class="row">
           <div class="col-xl-6">
@@ -30,33 +26,35 @@
   </label>
     <% end %>
   </div>
-<div class="card mb-4">
-  <div class="card-header">発注履歴</div>
-    <div class="card-body">
-      <div class="table-responsive">
-        <table class="table table-bordered">
-          <thead>
-            <tr>
-              <th>タイトル</th>
-              <th>第一キーワード</th>
-              <th>第二キーワード</th>
-              <th>文字数</th>
-              <th>発注日</th>
-              <th>削除</th>
-            </tr>
-          </thead>
-          <tbody>
-            <% @orders.each do |order| %>
+  <div class="card mb-4">
+    <div class="card-header">発注履歴</div>
+      <div class="card-body">
+        <div class="table-responsive">
+          <table class="table table-bordered">
+            <thead>
               <tr>
-                <td><%= order.title %></td>
-                <td><%= order.first_keyword %></td>
-                <td><%= order.second_keyword %></td>
-                <td><%= order.words %></td>
-                <td><%= order.created_at %></td>
-                <td><%= link_to "削除", admins_order_path(order),method: :delete, class: "btn btn-primary" %></td>
+                <th>タイトル</th>
+                <th>第一キーワード</th>
+                <th>第二キーワード</th>
+                <th>文字数</th>
+                <th>発注日</th>
+                <th>削除</th>
               </tr>
-            <% end %>
-          </tbody>
-        </table>
+            </thead>
+            <tbody>
+              <% @orders.each do |order| %>
+                <tr>
+                  <td><%= order.title %></td>
+                  <td><%= order.first_keyword %></td>
+                  <td><%= order.second_keyword %></td>
+                  <td><%= order.words %></td>
+                  <td><%= order.created_at %></td>
+                  <td><%= link_to "削除", admins_order_path(order),method: :delete, class: "btn btn-primary" %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
       </div>
-    </div>
+  </div>
+</div>
