--- a/app/views/admins/posts/delivered.html.erb
+++ b/app/views/admins/posts/delivered.html.erb
@@ -3,42 +3,42 @@
 <%= render 'admins/shared/header' %>
 <div id="layoutSidenav_content">
   <div class="container-fluid">
-      <h1 class="mt-4">納品済みの記事一覧</h1>
+    <h1 class="mt-4">納品済みの記事一覧</h1>
       <% if notice %>
-        <div class="sucsess-flash-message"><%= flash[:notice]%>
-          <button type="button" class="close" data-dismiss="alert">&times;</button>
-        </div>
+        <div class="sucsess-flash-message"><%= flash[:notice]%></div>
       <% elsif alert %>
-        <div class="error-flash-message"><%= flash[:alert]%>
-          <button type="button" class="close" data-dismiss="alert">&times;</button>
-        </div>
+        <div class="error-flash-message"><%= flash[:alert]%></div>
       <% end %>
-<div class="card mb-4">
-  <div class="card-header">記事情報</div>
-    <div class="card-body">
-      <div class="table-responsive">
-        <table class="table table-bordered">
-          <thead>
-            <tr>
-              <th>タイトル</th>
-              <th>第一キーワード</th>
-              <th>第二キーワード</th>
-              <th>文字数</th>
-              <th>応募日</th>
-              <th></th>
-            </tr>
-          </thead>
-          <tbody>
-              <% @posts.each do |post| %>
-                <td><%= post.order.title %></td>
-                <td><%= post.order.first_keyword %></td>
-                <td><%= post.order.second_keyword %></td>
-                <td><%= post.order.words %></td>
-                <td><%= post.created_at %></td>
-                <td><%= link_to "記事を確認する", admins_post_path(post), class: "btn btn-primary" %></td>
-              </tr>
-            <% end %>
-          </tbody>
-        </table>
-      </div>
+    <div class="card mb-4">
+      <div class="card-header">記事情報</div>
+        <div class="card-body">
+          <div class="table-responsive">
+            <table class="table table-bordered">
+              <thead>
+                <tr>
+                  <th>タイトル</th>
+                  <th>第一キーワード</th>
+                  <th>第二キーワード</th>
+                  <th>文字数</th>
+                  <th>応募日</th>
+                  <th></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                <% @posts.each do |post| %>
+                  <td><%= post.order.title %></td>
+                  <td><%= post.order.first_keyword %></td>
+                  <td><%= post.order.second_keyword %></td>
+                  <td><%= post.order.words %></td>
+                  <td><%= post.created_at %></td>
+                  <td><%= link_to "記事を確認する", admins_post_path(post), class: "btn btn-primary" %></td>
+                </tr>
+                <% end %>
+              </tbody>
+            </table>
+          </div>
+        </div>
     </div>
+  </div>
+</div>
