--- a/app/views/admins/posts/show.html.erb
+++ b/app/views/admins/posts/show.html.erb
@@ -4,48 +4,46 @@
   <div class="container-fluid">
     <h1 class="mt-4">記事検修画面</h1>
       <% if notice %>
-        <div class="sucsess-flash-message"><%= flash[:notice]%>
-          <button type="button" class="close" data-dismiss="alert">&times;</button>
-        </div>
+        <div class="sucsess-flash-message"><%= flash[:notice]%></div>
       <% elsif alert %>
-        <div class="error-flash-message"><%= flash[:alert]%>
-          <button type="button" class="close" data-dismiss="alert">&times;</button>
-        </div>
+        <div class="error-flash-message"><%= flash[:alert]%></div>
       <% end %>
-  <div class="card mb-4">
-  <div class="card-header">記事情報</div>
-    <div class="card-body">
-      <div class="table-responsive">
-        <table class="table table-bordered">
-          <thead>
-            <tr>
-              <th>タイトル</th>
-              <th>第一キーワード</th>
-              <th>第二キーワード</th>
-              <th>第三キーワード</th>
-              <th>第四キーワード</th>
-              <th>文字数</th>
-            </tr>
-          </thead>
-          <tbody>
-              <tr>
-                <td><%= @post.order.title %></td>
-                <td><%= @post.order.first_keyword %></td>
-                <td><%= @post.order.second_keyword %></td>
-                <td><%= @post.order.third_keyword %></td>
-                <td><%= @post.order.fourth_keyword %></td>
-                <td><%= @post.order.words %></td>
-              </tr>
-          </tbody>
-        </table>
-      </div>
-      </div>
-      </div>
-  <div class="card mb-4">
-  <div class="card-header">記事の中身</div>
-    <div class="card-body">
-      <%= @post.content %>
+    <div class="card mb-4">
+      <div class="card-header">記事情報</div>
+        <div class="card-body">
+          <div class="table-responsive">
+            <table class="table table-bordered">
+              <thead>
+                <tr>
+                  <th>タイトル</th>
+                  <th>第一キーワード</th>
+                  <th>第二キーワード</th>
+                  <th>第三キーワード</th>
+                  <th>第四キーワード</th>
+                  <th>文字数</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><%= @post.order.title %></td>
+                  <td><%= @post.order.first_keyword %></td>
+                  <td><%= @post.order.second_keyword %></td>
+                  <td><%= @post.order.third_keyword %></td>
+                  <td><%= @post.order.fourth_keyword %></td>
+                  <td><%= @post.order.words %></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
     </div>
+    <div class="card mb-4">
+      <div class="card-header">記事の中身</div>
+        <div class="card-body">
+          <%= @post.content %>
+        </div>
+    </div>
+    <%= link_to "差し戻す",  declined_admins_post_path , method: :patch, class: "btn-flat-border " %>
+    <%= link_to "公開する",  publish_admins_post_path , method: :patch, class: "btn-flat-border " %>
   </div>
-<%= link_to "差し戻す",  declined_admins_post_path , method: :patch, class: "btn-flat-border " %>
-<%= link_to "公開する",  publish_admins_post_path , method: :patch, class: "btn-flat-border " %>
+</div>
