--- a/app/views/admins/posts/closed.html.erb
+++ b/app/views/admins/posts/closed.html.erb
@@ -1,8 +1,9 @@
+
 <%= render 'admins/shared/admin_sidebar' %>
 <%= render 'admins/shared/header' %>
 <div id="layoutSidenav_content">
   <div class="container-fluid">
-    <h1 class="mt-4">記事検修画面</h1>
+    <h1 class="mt-4"> 非公開の記事一覧</h1>
       <% if notice %>
         <div class="sucsess-flash-message"><%= flash[:notice]%></div>
       <% elsif alert %>
@@ -18,33 +19,26 @@
                   <th>タイトル</th>
                   <th>第一キーワード</th>
                   <th>第二キーワード</th>
-                  <th>第三キーワード</th>
-                  <th>第四キーワード</th>
                   <th>文字数</th>
+                  <th>応募日</th>
+                  <th></th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
-                  <td><%= @post.order.title %></td>
-                  <td><%= @post.order.first_keyword %></td>
-                  <td><%= @post.order.second_keyword %></td>
-                  <td><%= @post.order.third_keyword %></td>
-                  <td><%= @post.order.fourth_keyword %></td>
-                  <td><%= @post.order.words %></td>
+                <% @posts.each do |post| %>
+                  <td><%= post.order.title %></td>
+                  <td><%= post.order.first_keyword %></td>
+                  <td><%= post.order.second_keyword %></td>
+                  <td><%= post.order.words %></td>
+                  <td><%= post.created_at %></td>
+                  <td><%= link_to "記事を確認する", admins_post_path(post), class: "btn btn-primary" %></td>
                 </tr>
+                <% end %>
               </tbody>
             </table>
           </div>
         </div>
     </div>
-    <div class="card mb-4">
-      <div class="card-header">記事の中身</div>
-        <div class="card-body">
-          <%= @post.content %>
-        </div>
-    </div>
-    <%= link_to "差し戻す",  declined_admins_post_path , method: :patch, class: "btn-flat-border " %>
-    <%= link_to "公開する",  publish_admins_post_path , method: :patch, class: "btn-flat-border " %>
-    <%= link_to "記事を修正する",  edit_admins_post_path , class: "btn-flat-border " %>
   </div>
 </div>
