--- a/app/views/admins/posts/published.html.erb
+++ b/app/views/admins/posts/published.html.erb
@@ -19,6 +19,8 @@
                   <th>第一キーワード</th>
                   <th>第二キーワード</th>
                   <th>文字数</th>
+                  <th></th>
+                  <th></th>
                 </tr>
               </thead>
               <tbody>
@@ -28,7 +30,8 @@
                   <td><%= post.order.first_keyword %></td>
                   <td><%= post.order.second_keyword %></td>
                   <td><%= post.order.words %></td>
-                  <td><%= link_to "記事を確認する", post_path(post), class: "btn btn-primary" %></td>
+                  <td><%= link_to "記事を確認", post_path(post), class: "btn btn-primary" %></td>
+                  <td><%= link_to "記事を編集", edit_admins_post_path(post), class: "btn btn-primary" %></td>
                 </tr>
                 <% end %>
               </tbody>
