コントローラーの設定のリセット

--- a/app/views/admins/posts/edit.html.erb
+++ b/app/views/admins/posts/edit.html.erb
@@ -39,7 +39,7 @@
         </div>
         </div>
         </div>
-        <%= render 'admins/shared/form', post: @post %>
+        <%= render 'users/shared/form', post: @post %>
         <%= link_to "記事を非公開にする",  closed_admins_post_path , method: :patch, class: "btn-flat-border " %>
     </div>
   </div>
