--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,7 +9,7 @@
     </div>
 </nav>
 
-<header class="masthead">
+<header class="masthead" style="background-image: url('https://post-cms.s3-ap-northeast-1.amazonaws.com/about-bg.jpg')">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
